=== Alexander-33 ===

2002-11-21  David Hyatt  <hyatt@apple.com>

	Fix mac.com regression (and weather.com regression).
	
        * khtml/rendering/bidi.cpp:
        (RenderFlow::findNextLineBreak):

2002-11-21  Richard Williamson   <rjw@apple.com>

        Fixed performance regression!  Argh.
        
        * khtml/rendering/font.cpp:
        (Font::width):

2002-11-21  Darin Adler  <darin@apple.com>

        * force-js-clean-timestamp: Trigger a rebuild because of the
	size change in ValueImp.

2002-11-21  Darin Adler  <darin@apple.com>

	- fixed 3107286 -- REGRESSION: unrepro assertion failure in KWQKHTMLPart.mm keyEvent

        * kwq/KWQKHTMLPart.mm: (KWQKHTMLPart::keyEvent):
	Handle case of nil document as well as case of nil focus node.

        * kwq/WebCoreBridge.mm: Tweak whitespace.

2002-11-20  Darin Adler  <darin@apple.com>

	- fixed 3107383 -- clicking link on cnet.com leads to assertion failure

	When we removed a frame, we were leaving behind an empty WebView. Yuck.

        * kwq/KWQScrollView.mm:
        (QScrollView::addChild): Use the new getOuterView.
        (QScrollView::removeChild): Ditto. This was the bug fix.
        * kwq/KWQWidget.h: Add getOuterView.
        * kwq/KWQWidget.mm:
        (QWidget::frameGeometry): Use the new getOuterView.
        (QWidget::setFrameGeometry): Ditto.
        (QWidget::getOuterView): Added. Does the WebCoreFrameView magic to find
	the WebView instead of the WebHTMLView. Yuck.
        (QWidget::paint): Use the new getOuterView.

2002-11-20  Darin Adler  <darin@apple.com>

        * force-js-clean-timestamp: Again.

2002-11-20  David Hyatt  <hyatt@apple.com>

	Fix the mac.com line-breaking bug.  This was not a regression
	but was present in Konq.
	
        * khtml/rendering/bidi.cpp:
        (RenderFlow::findNextLineBreak):

2002-11-20  Maciej Stachowiak  <mjs@apple.com>

        * force-js-clean-timestamp: Work around PB lameness yet again.

2002-11-19  Darin Adler  <darin@apple.com>
